@@ -225,7 +225,7 @@ public abstract class StoredFieldsWriter implements Closeable {
     }
 
     @Override
-    public TokenStream tokenStream(Analyzer analyzer, TokenStream reuse) throws IOException {
+    public TokenStream tokenStream(Analyzer analyzer, TokenStream reuse) {
       return null;
     }
 
