@@ -100,7 +100,7 @@ public class SuggestField extends Field {
   }
 
   @Override
-  public TokenStream tokenStream(Analyzer analyzer, TokenStream reuse) throws IOException {
+  public TokenStream tokenStream(Analyzer analyzer, TokenStream reuse) {
     CompletionTokenStream completionStream = wrapTokenStream(super.tokenStream(analyzer, reuse));
     completionStream.setPayload(buildSuggestPayload());
     return completionStream;
@@ -126,13 +126,15 @@ public class SuggestField extends Field {
     return TYPE;
   }
 
-  private BytesRef buildSuggestPayload() throws IOException {
+  private BytesRef buildSuggestPayload() {
     ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
     try (OutputStreamDataOutput output = new OutputStreamDataOutput(byteArrayOutputStream)) {
       output.writeVInt(surfaceForm.length);
       output.writeBytes(surfaceForm.bytes, surfaceForm.offset, surfaceForm.length);
       output.writeVInt(weight + 1);
       output.writeByte(type());
+    } catch (IOException e) {
+      throw new RuntimeException(e); // not possible, it's a ByteArrayOutputStream!
     }
     return new BytesRef(byteArrayOutputStream.toByteArray());
   }
